note