@@ -1,5 +1,5 @@
-nohup java -jar \
+java -jar \
         -Xms2G \
         -Xmx2G \
-        ../target/spring-aop-interceptor-0.0.1-SNAPSHOT.jar \
-        > /dev/null 2>&1 &
+        -ea -verbose:gc -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintHeapAtGC -Xloggc:./gc.log \
+        ../target/spring-aop-interceptor-0.0.1-SNAPSHOT.jar 
